# gramic

./: .env.example  Cargo.toml  README.md
examples/: bot.rs
src/: error.rs  lib.rs  types.rs
