[package]
name        = "gramic"
version     = "0.1.0"
edition     = "2021"
description = "Minimal Telegram webhook: one-liner to set, delete, or serve updates"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"

[[example]]
name = "bot"
